Fix navigation alignment and color - navigation is now equally spaced - call now text is now white

--- a/src/output.css
+++ b/src/output.css
@@ -618,24 +618,13 @@ video {
   border-radius: 0.25rem;
 }
 
-.bg-main-blue {
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(1 71 255 / var(--tw-bg-opacity));
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .px-6 {
@@ -648,10 +637,25 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(247 247 247 / var(--tw-text-opacity));
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Roboto Flex", system-ui;
 }
 
 body {
